# sparql-grammar-pydantic

./: .gitignore  CHANGELOG.md  pyproject.toml
sparql_grammar_pydantic/: __init__.py  grammar.py  terminals.py  terminals_regex.py
tests/: test.py
